--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "flag-icon-css": "^4.1.5",
     "next": "12.0.3",
-    "next-i18next": "^9.1.0",
+    "next-translate": "^1.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "sass": "^1.43.4"
