--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "flag-icon-css": "^4.1.5",
     "next": "12.0.3",
     "next-translate": "^1.2.0",
