--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "next-translate": "^1.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "sass": "^1.43.4"
+    "sass": "^1.43.4",
+    "simple-react-lightbox": "^3.6.9-0",
+    "swiper": "^6.8.1"
   },
   "devDependencies": {
     "eslint": "7.32.0",
